# My-OpenGL-Study

0001/src/: main.cpp
0002/: Makefile
0002/src/: main.cpp
0003/src/: main.cpp
0004/include/: Lib.hpp
0004/src/: main.cpp
0005/include/: Library.hpp
0005/shaders/: fragment.frag
0005/src/: main.cpp
0006/include/: Shader.hpp  Utils.hpp
0006/shaders/: vertex.vs
0006/src/: Shader.cpp  main.cpp
0007/include/: Shader.hpp
0007/shaders/: vertex.vs
0007/src/: Shader.cpp  Utils.cpp  main.cpp
0008/include/: Shader.hpp
0008/shaders/: fragment.fs  vertex.vs
0008/src/: Shader.cpp  main.cpp
0009/include/: OpenGL_Utils.hpp  Rectangle.hpp  SDL_Utils.hpp  Shader.hpp
0009/shaders/: default.fs  default.vs
0009/src/: OpenGL_Utils.cpp  Rectangle.cpp  SDL_Utils.cpp  Shader.cpp  main.cpp
0010/: CMakeLists.txt  Makefile
0010/include/core/: App.hpp  Window.hpp
0010/include/graphics/: Rectangle.hpp  Shader.hpp  Shape.hpp
0010/include/utils/: OpenGL_Manager.hpp  SDL_Manager.hpp
0010/shaders/: default.fs  default.vs
0010/src/: main.cpp
0010/src/core/: App.cpp  Window.cpp
0010/src/graphics/: Rectangle.cpp  Shader.cpp  Shape.cpp
0010/src/utils/: OpenGL_Manager.cpp  SDL_Manager.cpp
